feat: migrate to quarkus (#13)